--- a/updateform.ui
+++ b/updateform.ui
@@ -15,16 +15,16 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QLabel" name="lblCurrentDate">
+    <widget class="QLabel" name="lblCurrentVersion">
      <property name="text">
-      <string>Current file date:</string>
+      <string>Current commit:</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="lblLatestVersion">
      <property name="text">
-      <string>Latest snapshot:</string>
+      <string>Latest commit:</string>
      </property>
     </widget>
    </item>
@@ -87,7 +87,7 @@
    <item>
     <widget class="QPushButton" name="applyButton">
      <property name="enabled">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <property name="text">
       <string>Apply update</string>
