--- a/updateform.ui
+++ b/updateform.ui
@@ -120,9 +120,9 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QPushButton" name="pbNothing">
+      <widget class="QPushButton" name="pbForceCoreUpdate">
        <property name="text">
-        <string>Do nothing</string>
+        <string>Force core update</string>
        </property>
       </widget>
      </item>
