--- a/updateform.ui
+++ b/updateform.ui
@@ -103,6 +103,9 @@
        <property name="text">
         <string>Update all on exit</string>
        </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item row="0" column="0">
